<resources>
    <string name="app_name">SAGApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bluetooth">BluetoothActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_activities">activities</string>
    <string name="splash_title">SAG</string>

    <string name="Splash_Sag_Image">Splash Image</string>
    <string name="first_onboard_screen">How to use SAG</string>

    <string name="first_onboard_page">Lorem Ipsum is simply dummy text of the printing and typesetting industryLorem Ipsum has been the industry\'s standard </string>
    <string name="second_onboard_page">Lorem Ipsum is simply dummy text of the printing and typesetting industryLorem Ipsum has been the industry\'s standard</string>
    <string name="third_onboard_page">Lorem Ipsum is simply dummy text of the printing and typesetting industryLorem Ipsum has been the industry\'s standard</string>
    <string name="skip_btn">SKIP</string>
    <string name="next_btn">NEXT</string>
    <string name="img_onboard_rv">Onboard Image</string>
    <string name="get_start">Get Start</string>
    <string name="login_title">Login</string>
    <string name="login_sub_title">please sign in to continue</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password_tv">Forget Password?</string>
    <string name="remember_me">Remember me</string>
    <string name="quarter_circle_image_description">Quarter Circle Image</string>

    <string name="forgot_password_title">Forgot Password</string>
    <string name="forget_sub_txt">please enter the address associated with your account</string>
    <string name="send_btn">Send</string>

    <string name="successful_operation_tv">Successful operation</string>
    <string name="success_sub_title">Check your Email to see new password</string>
    <string name="home_TV">Smart Assistant Glasses</string>


</resources>