<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/splashtitle"
        style="@style/first_onboard_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/first_onboard_screen"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/first_onboard" />

    <TextView
        android:id="@+id/descriptionsplash"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:layout_marginTop="88dp"
        style="@style/first_onboard_page_text"
        android:text="@string/first_onboard_page"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/splashtitle" />

    <TextView
        android:id="@+id/next_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:text="@string/next_btn"
        android:layout_marginTop="110dp"
        style="@style/Button"
        android:drawableEnd="@drawable/ic_arrow"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descriptionsplash" />

    <TextView
        android:id="@+id/skip_btn"
        android:layout_width="55dp"
        android:layout_height="27dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="110dp"
        style="@style/Button"
        android:text="@string/skip_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/descriptionsplash"
        app:layout_constraintTop_toBottomOf="@+id/descriptionsplash" />

</androidx.constraintlayout.widget.ConstraintLayout>