<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".authentication.ui.LoginFragment">
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".58"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".22"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/quarter_circle"
        app:layout_constraintStart_toEndOf="@id/guideline1"
        app:layout_constraintBottom_toTopOf="@id/guideline2"
        android:contentDescription="@string/quarter_circle_image_description"
        />

    <TextView
        android:id="@+id/login_fragment_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_title"
        style="@style/forget_password_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_25sdp"
        app:layout_constraintTop_toBottomOf="@id/guideline2"
        />

    <TextView
        android:id="@+id/login_fragment_subtitle_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_sub_txt"
        style="@style/login_sub_title"
        android:textSize="@dimen/_11ssp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@+id/login_fragment_title_tv"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputTextLayoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/setup_ed_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_fragment_subtitle_txt"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:hint="@string/email"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:drawableLeft="@drawable/ic_email"
            android:textColor="@color/dark_green"
            android:textSize="@dimen/_12ssp"
            android:paddingTop="@dimen/_11ssp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/button_style"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:text="@string/send_btn"
        android:textSize="@dimen/_13ssp"
        android:layout_marginBottom="@dimen/_18sdp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>