<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/off_white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager_onboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="175dp"

        />
    <com.zhpan.indicator.IndicatorView
        android:id="@+id/indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="120dp"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/onboard_fragment_confirm_btn"
        style="@style/button_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:text="@string/get_start"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/indicator"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        />
    <TextView
        android:id="@+id/onboard_fragment_next_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/indicator"
        android:text="@string/next_btn"
        style="@style/txt_style"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        />
    <TextView
        android:id="@+id/onboard_fragment_skip_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/indicator"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/skip_btn"
        style="@style/txt_style"
        android:layout_marginStart="@dimen/_18sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        />
</androidx.constraintlayout.widget.ConstraintLayout>